Overflow fix 2 - mobiles

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,10 +6,11 @@
   margin: 0 auto;
   padding: 40px;
   /* margin-top: 50px; */
-  color: red !important;
+  /* color: red !important; */
   max-height: 100vh;
   min-width: 100vw;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .todoItem .taskActionsWrapper {
@@ -58,18 +59,6 @@
 }
 
 /* BACKGROUND */
-
-/* html {
-  background: #F1F1F1;
-  height: 100%;
-  overflow-y: auto;
-} */
-
-body {
-  background: #F1F1F1;
-  height: 100%;
-  overflow: hidden;
-}
 
 .background {
   z-index: -999;
